tests/negative/typecheck/infer_fail.orng
// infer_fail.orng:6:17: error: cannot infer type for initializer
//     let x = .lol
//                ^
// 
fn main() -> Int {
    let x = .lol
    0
}